			- Plugins:
				- Added plugin manager
				- Updated demo plugin to fit with events system changes
	Tools:
		- Updated PhpMyAdmin to version 3.4.10	

Tickets:
	- Fixed #201: Cosmetics - An exception have been thrown at Login with wrong password
	- Fixed #345: Bug - admin - statistics
	- Fixed #346: Cosmetics - SquirrelMail - Warning: mime.php on line 36

-------------------------------------------------------------------------------------
i-MSCP 1.0.2.0 (RC1)
-------------------------------------------------------------------------------------
2012-02-10: Torsten Widmann
	- RELEASE i-MSCP 1.0.2.0 (RC1)

Tickets:
	- Fixed #309: Review - User profile icon must be revisited
	- Fixed #323: Defect - Password for customer not sent via mail
	- Fixed #325: Defect - Missing PHP sendmail parameter in vhost file for ITK
	- Fixed #328: Defect - Pagination is broken (reseller/domain_alias.tpl)
	- Fixed #330: Defect - The cron task for the anti-rootkit (chkrootkit) doesn't work
	- Fixed #332: Bug - Autoresponder - alias missing
	- Fixed #336: Bug - Domain alias deletion
	- Fixed #327: Bug - Fcgi process should be killed during setup/update
	- Fixed #344: Bug - PHP session garbage collector not implemented for the panel (GUI)

-------------------------------------------------------------------------------------
i-MSCP 1.0.1.6 (beta 6)
-------------------------------------------------------------------------------------
2012-01-19: Torsten Widmann
	- RELEASE i-MSCP 1.0.1.6 (Beta 6)

Features / Enhancements:

	ENGINE:
		Core:
			- Added support for Apache2 MPM ITK
			- Added SSL support for customers
	GUI:
		Components:
			- DebugBar:
				- Updated layout
				- Files plugin: Count and shows the loaded templates files
		Core:
			- Added layout color switcher
			- Added layout colors (black, green, red, yellow)
			- Added admin setting to allow to show/hide main menu labels
			- Events system:
				- Allow to pass arbitrary data to the events listeners methods